# lidar-to-depth-image-converter

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh
.github/workflows/: build-linux.yml
include/: bin_converter.h  cli_parser.h  constants.h
src/: bin_converter.cpp  cli_parser.cpp  main.cpp
